fix: scope code block margin to avoid header gap

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -52,8 +52,9 @@ img:hover {
   margin-right: 2px;
 }
 
-// Code
-.highlight {
+// Code block spacing (not inside .code-block header)
+.content > .highlight,
+.content > .code-block {
   margin-top: 20px !important;
   margin-bottom: 20px !important;
 }
